Add screen to media query

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,10 @@
   font-family: "Poppins", sans-serif !important;
   src: url(./font/my-font.woff2) format("woff2"), url(./font/my-font.woff) format("woff");
 }
+.font {
+  font-family: "Poppins", sans-serif !important;
+  font-style: normal;
+}
 
 body {
   display: -webkit-box;
@@ -9,14 +13,14 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding: 10px 12px;
   border: 10px solid #000;
-  height: 93vh;
+  min-height: 93vh;
   background: linear-gradient(1380deg, rgba(140, 198, 64, 0.3529411765), rgba(140, 198, 64, 0.831372549));
 }
 
@@ -29,13 +33,13 @@ button {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  width: 100%;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 100%;
 }
 
 .app-Name {
@@ -43,31 +47,29 @@ button {
   font-size: 3rem;
   text-align: center;
   padding: 0;
-  font-family: "Poppins", sans-serif !important;
   cursor: none;
 }
 
 .value {
-  height: 30vh;
+  min-height: 30vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-size: 7rem;
   text-align: center;
   padding: 0;
   background: linear-gradient(1380deg, rgba(233, 61, 58, 0.2549019608), #e93e3a);
   border-radius: 10px;
-  font-family: "Poppins", sans-serif !important;
   font-weight: 400;
   cursor: none;
 }
@@ -77,44 +79,38 @@ button {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-  justify-content: space-around;
+      justify-content: space-around;
 }
-
 .buttons-div .buttons {
-  width: 30vw;
+  max-width: 30vw;
   background-color: inherit;
   border: 0;
 }
-
 .buttons-div .buttons #add-button-image,
 .buttons-div .buttons #minus-button-image {
-  width: 20vw;
+  max-width: 20vw;
   background-color: inherit;
 }
-
 .buttons-div .buttons #reset-button-image {
-  width: 12vw;
+  max-width: 12vw;
   background-color: inherit;
 }
-
 .buttons-div .button-images:hover {
   -webkit-transform: scale(1.05);
-  transform: scale(1.05);
+          transform: scale(1.05);
 }
-
 .buttons-div .button-images:active {
   -webkit-transform: scale(0.8);
-  transform: scale(0.8);
+          transform: scale(0.8);
 }
 
-@media (min-width: 760px) {
+@media screen and (min-width: 768px) {
   body {
     padding: 0;
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
+    min-height: -webkit-fit-content;
+    min-height: -moz-fit-content;
+    min-height: fit-content;
   }
-
   #app {
     padding: 0 200px;
     width: inherit;
@@ -122,25 +118,20 @@ button {
     height: -moz-fit-content;
     height: fit-content;
   }
-
   .app-Name {
     font-size: 2.5rem;
     font-weight: 500;
-    font-style: normal;
   }
-
   .value {
     font-size: 10rem;
   }
-
   .buttons-div .buttons #add-button-image,
-  .buttons-div .buttons #minus-button-image {
-    width: 10vw;
+.buttons-div .buttons #minus-button-image {
+    max-width: 10vw;
     background-color: inherit;
   }
-
   .buttons-div .buttons #reset-button-image {
-    width: 10vw;
+    max-width: 10vw;
     background-color: inherit;
   }
 }
